--- a/all-products.html
+++ b/all-products.html
@@ -82,7 +82,7 @@
         <div
           class="row row-cols-1 justify-content-center row-cols-sm-2 row-cols-md-5 border-0 g-4 product-card"
         >
-          <div class="card col cyan border-0 py-2 mx-2 px-3">
+          <div class="card col cyan border-0 py-2 mx-2 px-3 slide-in-left">
             <div class="pt-lg-5">
               <img class="py-2 gif" src="./images/gaming-chair.gif" alt="" />
             </div>
@@ -101,13 +101,9 @@
               </div>
             </div>
           </div>
-          <div class="card border-0 col blue mx-2 py-2 px-3">
+          <div class="card border-0 col blue mx-2 py-2 px-3 slide-in-left">
             <div class="pt-lg-5">
-              <img
-                class="py-2 gif"
-                src="./images/Image-Container (1).png"
-                alt=""
-              />
+              <img class="py-2 gif" src="./images/kitchen-cabinet.png" alt="" />
             </div>
             <h6 class="card-title pt-lg-4">Kitchen Cabinet</h6>
             <div class="d-flex justify-content-between">
@@ -124,7 +120,7 @@
               </div>
             </div>
           </div>
-          <div class="card border-0 col-sm purple mx-2 py-2 px-3">
+          <div class="card border-0 col-sm purple mx-2 py-2 px-3 slide-in-left">
             <div class="pt-lg-5">
               <img
                 class="text-center py-2 gif"
@@ -147,11 +143,11 @@
               </div>
             </div>
           </div>
-          <div class="card border-0 col pink mx-2 py-2 px-3">
+          <div class="card border-0 col pink mx-2 py-2 px-3 slide-in-left">
             <div class="pt-lg-5">
               <img
                 class="text-center py-2 gif"
-                src="./images/Image-Container (2).png"
+                src="./images/table.png"
                 alt=""
               />
             </div>
@@ -170,7 +166,7 @@
               </div>
             </div>
           </div>
-          <div class="card border-0 col cyan mx-2 py-2 px-3">
+          <div class="card border-0 col cyan mx-2 py-2 px-3 slide-in-left">
             <div class="pt-lg-5">
               <img
                 class="text-center py-2 gif"
@@ -193,7 +189,7 @@
               </div>
             </div>
           </div>
-          <div class="card border-0 col blue mx-2 py-2 px-3">
+          <div class="card border-0 col blue mx-2 py-2 px-3 slide-in-left">
             <div class="pt-lg-5">
               <img
                 class="text-center py-2 gif"
@@ -216,7 +212,7 @@
               </div>
             </div>
           </div>
-          <div class="card border-0 col purple mx-2 py-2 px-3">
+          <div class="card border-0 col purple mx-2 py-2 px-3 slide-in-left">
             <div class="pt-lg-5 if">
               <img class="text-center py-2 gif" src="./images/art.png" alt="" />
             </div>
@@ -235,7 +231,7 @@
               </div>
             </div>
           </div>
-          <div class="card border-0 col pink mx-2 py-2 px-3">
+          <div class="card border-0 col pink mx-2 py-2 px-3 slide-in-left">
             <div class="pt-lg-5">
               <img
                 class="text-center py-2 gif"
@@ -258,7 +254,7 @@
               </div>
             </div>
           </div>
-          <div class="card border-0 col cyan mx-2 py-2 px-3">
+          <div class="card border-0 col cyan mx-2 py-2 px-3 slide-in-left">
             <div class="pt-lg-5">
               <img
                 class="text-center py-2 gif"
@@ -282,7 +278,7 @@
               </div>
             </div>
           </div>
-          <div class="card border-0 col blue mx-2 py-2 px-3">
+          <div class="card border-0 col blue mx-2 py-2 px-3 slide-in-left">
             <div class="pt-lg-5">
               <img
                 class="text-center py-2 gif"
@@ -305,7 +301,7 @@
               </div>
             </div>
           </div>
-          <div class="card border-0 col purple mx-2 py-2 px-3">
+          <div class="card border-0 col purple mx-2 py-2 px-3 slide-in-left">
             <div class="pt-lg-5">
               <img
                 class="text-center py-2 gif"
@@ -321,14 +317,14 @@
               </div>
               <div class="align-self-end py-2">
                 <button class="btn blue-bg px-2 py-3">
-                  <a class="nav-link" href="./products/dining.html"
+                  <a class="nav-link" href="./products/dining-table.html"
                     >view product</a
                   >
                 </button>
               </div>
             </div>
           </div>
-          <div class="card border-0 col pink mx-2 py-2 px-3">
+          <div class="card border-0 col pink mx-2 py-2 px-3 slide-in-left">
             <div class="pt-lg-5">
               <img
                 class="text-center py-2 gif"
@@ -344,7 +340,7 @@
               </div>
               <div class="align-self-end py-2">
                 <button class="btn blue-bg px-2 py-3">
-                  <a class="nav-link" href="./products/gas.html"
+                  <a class="nav-link" href="./products/cooker.html"
                     >view product</a
                   >
                 </button>
