--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
         class="card header mx-lg-5 border-0 my-5 mt-5 pt-lg-5 text-center"
       >
         <h1 class="usecase">Use Cases</h1>
-        <div class="row border-0 mx-auto g-5">
-          <div class="card col-sm-4 border-0">
+        <div class="row border-0 mx-auto g-5 slide-in-left">
+          <div class="card col-sm-4 border-0 slide-in-left">
             <div class="pt-5">
               <img class="py-3" src="./images/icon1.png" alt="" />
             </div>
@@ -111,7 +111,7 @@
               Tailored shopping experience for individual customers.
             </p>
           </div>
-          <div class="card border-0 col-sm-4">
+          <div class="card border-0 col-sm-4 slide-in-left">
             <div class="pt-lg-5">
               <img class="py-3" src="./images/icon2.png" alt="" />
             </div>
@@ -120,21 +120,21 @@
               Realistic and detailed view of a product before purchase.
             </p>
           </div>
-          <div class="card border-0 col-sm-4">
+          <div class="card border-0 col-sm-4 slide-in-left">
             <div class="pt-lg-5">
               <img class="text-center py-3" src="./images/icon3.png" alt="" />
             </div>
             <h6 class="card-title text-center">Marketing and Advertising</h6>
             <p class="card-text">Targeted efforts to reach desired audience.</p>
           </div>
-          <div class="card border-0 col-sm-6 pt-lg-4">
+          <div class="card border-0 col-sm-6 pt-lg-4 slide-in-left">
             <div class="pt-lg-5">
               <img class="text-center py-3" src="./images/icon4.png" alt="" />
             </div>
             <h6 class="card-title text-center">Marketing and Advertising</h6>
             <p class="card-text">Targeted efforts to reach desired audience.</p>
           </div>
-          <div class="card border-0 col-sm-6 pt-lg-4">
+          <div class="card border-0 col-sm-6 pt-lg-4 slide-in-left">
             <div class="pt-lg-5">
               <img class="text-center py-3" src="./images/icon5.png" alt="" />
             </div>
