--- a/product.html
+++ b/product.html
@@ -93,7 +93,7 @@
         <div
           class="row row-cols-1 justify-content-center row-cols-sm-2 row-cols-md-5 border-0 g-4 product-card"
         >
-          <div class="card col cyan border-0 py-2 mx-2 px-3">
+          <div class="card col cyan border-0 py-2 mx-2 px-3 slide-in-left">
             <div class="pt-lg-5">
               <img class="py-2 gif" src="./images/gaming-chair.gif" alt="" />
             </div>
@@ -112,13 +112,9 @@
               </div>
             </div>
           </div>
-          <div class="card border-0 col blue mx-2 py-2 px-3">
+          <div class="card border-0 col blue mx-2 py-2 px-3 slide-in-left">
             <div class="pt-lg-5">
-              <img
-                class="py-2 gif"
-                src="./images/Image-Container (1).png"
-                alt=""
-              />
+              <img class="py-2 gif" src="./images/kitchen-cabinet.png" alt="" />
             </div>
             <h6 class="card-title pt-3">Kitchen Cabinet</h6>
             <div class="d-flex justify-content-between">
@@ -135,7 +131,7 @@
               </div>
             </div>
           </div>
-          <div class="card border-0 col-sm purple mx-2 py-2 px-3">
+          <div class="card border-0 col-sm purple mx-2 py-2 px-3 slide-in-left">
             <div class="pt-lg-5">
               <img
                 class="text-center py-2 gif"
@@ -159,11 +155,11 @@
               </div>
             </div>
           </div>
-          <div class="card border-0 col pink mx-2 py-2 px-3">
+          <div class="card border-0 col pink mx-2 py-2 px-3 slide-in-left">
             <div class="pt-lg-5">
               <img
                 class="text-center py-2 gif"
-                src="./images/Image-Container (2).png"
+                src="./images/table.png"
                 alt=""
               />
             </div>
